--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   camera: ^0.11.0+1
   qr_code_scanner: ^1.0.0
+  ar_flutter_plugin_flutterflow: ^0.7.47
 
 dev_dependencies:
   flutter_test:
